feat: add shortcut details dto
